--- a/css/fixed-header.css
+++ b/css/fixed-header.css
@@ -7,7 +7,11 @@
 }
 
 .header {
-    background-color: rgb(90, 90, 90);
+    background-color: rgb(0, 0, 0);
+}
+
+.footer {
+    background-color: rgb(0, 0, 0);
 }
 
 .header__wrapper {
@@ -48,6 +52,31 @@ section {
 
 .footer-list a {
     width: 100%;
+}
+
+.up-btn {
+    background-color: rgb(65, 8, 8);
+    padding: 15px;
+    width: fit-content;
+    cursor: pointer;
+    border-radius: 40px;
+    transition: all .3s;
+    display: none;
+}
+
+.up-btn--fixed {
+    position: fixed;
+    right: 20px;
+    top: 70%;
+    bottom: 0;
+    display: block;
+    height: fit-content;
+    width: fit-content;
+}
+
+.up-btn:hover,
+.up-btn:active {
+    background-color: rgb(121, 12, 12);
 }
 
 @keyframes headerShow {
