--- a/css/fixed-header.css
+++ b/css/fixed-header.css
@@ -7,7 +7,8 @@
     margin-bottom: 50px;
 }
 
-.header {
+
+.header-first {
     background-color: rgb(0, 0, 0);
 }
 
@@ -86,5 +87,14 @@ section {
     }
     100% {
         transform: translate(0%);
+    }
+}
+
+@keyframes headerClose {
+    0% {
+        transform: translate(0%);
+    }
+    100% {
+        transform: translate(-100%);
     }
 }
