--- a/css/paralax.css
+++ b/css/paralax.css
@@ -9,7 +9,8 @@
 }
 
 .header-paralax {
-    width: 1408px;
+    width: 100%;
+    height: 100vh;
     margin: 0 auto;
     height: 100vh;
     position: relative;
@@ -24,9 +25,10 @@
     bottom: 0;
     width: 100%;
     height: 100vh;
-    background-image: url(../img/p16-1.jpg);
+    background-image: url(../img/p17-1.jpg);
     background-color: #fff;
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
     transform-origin: center top;
     transform: translateZ(-0.9px) translateX(-8px) scale(1.89);
@@ -48,7 +50,7 @@
     font-size: 4rem;
     line-height: 70px;
     margin-top: 0;
-    margin-bottom: 28px;
+    margin-bottom: 38px;
     text-shadow: 2px 2px #000;
 }
 
@@ -60,9 +62,28 @@
 }
 
 .main-parallax {
-    background-color: rgb(25, 34, 116);
+    background-color: rgb(235, 189, 65);
     transform: translateZ(0);
-    width: 1400px;
+    width: 100%;
     height: 1200px;
     margin: 0 auto;
+}
+
+.header-paralax__btn {
+    display: block;
+    background: rgb(243, 189, 42);
+    border: none;
+    padding: 10px 20px;
+    font-size: 28px;
+    text-transform: uppercase;
+    font-weight: 500;
+    border-radius: 50px;
+    margin-bottom: 25px;
+    cursor: pointer;
+    transition: all .2s ease-in;
+    transform: translateZ(12px);
+}
+
+.header-paralax__btn:hover {
+    background: rgb(255, 126, 20);
 }
